Reading SNPs from Snpedia Begin reading SNP details from Snpedia

--- a/app/views/snps/index.html.haml
+++ b/app/views/snps/index.html.haml
@@ -1,5 +1,9 @@
 %h1 Listing snps
 
+
+= link_to 'Start SNPs', start_snps_path
+= link_to 'Start SNP details', start_details_snps_path
+
 %table
   %tr
     %th Rs number
