--- a/app/views/snps/index.html.haml
+++ b/app/views/snps/index.html.haml
@@ -7,6 +7,7 @@
 %table
   %tr
     %th Rs number
+    %th Run
     %th
     %th
     %th
@@ -14,6 +15,7 @@
   - @snps.each do |snp|
     %tr
       %td= snp.rs_number
+      %td= snp.run_nr
       %td= link_to 'Show', snp
       %td= link_to 'Edit', edit_snp_path(snp)
       %td= link_to 'Destroy', snp, :method => :delete, :data => { :confirm => 'Are you sure?' }
